@@ -1,6 +1,6 @@
 Package: basilisk.utils
-Version: 1.19.0
-Date: 2024-09-10
+Version: 1.19.1
+Date: 2025-02-11
 Title: Basilisk Installation Utilities
 Authors@R: c(person("Aaron", "Lun", role=c("aut", "cre", "cph"),
         email="infinite.monkeys.with.keyboards@gmail.com"))
